fixing wrapping footer

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,7 @@ body {
             .row {
                 #this {
                     @media screen and (min-width: 1px) {
-                        width: 100%;
+                        width: 90%;
                     }
                     @media screen and (min-width: 768px) {
                         width: 50%;
@@ -19,7 +19,7 @@ body {
                 }
                 #that {
                     @media screen and (min-width: 1px) {
-                        width: 100%;
+                        width: 90%;
                     }
                     @media screen and (min-width: 768px) {
                         width: 50%;
@@ -27,7 +27,7 @@ body {
                 }
                 #those {
                     @media screen and (min-width: 1px) {
-                        width: 100%;
+                        width: 90%;
                     }
                     @media screen and (min-width: 768px) {
                         width: 50%;
